--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -7,117 +7,126 @@
     android:background="@drawable/background">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imgbtn_user"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="8dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imgbtn_user"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="8dp"
+                android:layout_weight="1"
+                android:onClick="onClick"
+                android:src="@drawable/user" />
+
+            <ImageView
+                android:id="@+id/image_logo"
+                android:layout_width="269dp"
+                android:layout_height="30dp"
+                android:src="@drawable/title" />
+
+            <ImageView
+                android:id="@+id/imgbtn_settings"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:layout_marginRight="8dp"
+                android:onClick="onClick"
+                android:padding="0dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/settings" />
+
+        </LinearLayout>
+
+
+        <com.prograpy.app2.appdev2.main.MainCustomViewPager
+            android:id="@+id/main_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            android:layout_weight="1">
+        </com.prograpy.app2.appdev2.main.MainCustomViewPager>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="onClick"
-            android:src="@drawable/user" />
+            android:visibility="gone"
+            android:gravity="center"
+            android:text="오늘 소개 끝!"
+            android:textSize="50sp"/>
 
-        <ImageView
-            android:id="@+id/image_logo"
-            android:layout_width="269dp"
-            android:layout_height="30dp"
-            android:src="@drawable/title" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center">
 
-        <ImageView
-            android:id="@+id/imgbtn_settings"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_weight="1"
-            android:layout_marginRight="8dp"
-            android:onClick="onClick"
-            android:padding="0dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/settings" />
+            <Button
+                android:id="@+id/btn_dislike"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:onClick="onClick"
+                android:text="넘기기" />
+
+            <Button
+                android:id="@+id/btn_like"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="onClick"
+                android:text="좋아요" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-
-    <com.prograpy.app2.appdev2.main.MainCustomViewPager
-        android:id="@+id/main_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
-        android:layout_weight="1">
-    </com.prograpy.app2.appdev2.main.MainCustomViewPager>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:visibility="gone"
-        android:gravity="center"
-        android:text="오늘 소개 끝!"
-        android:textSize="50sp"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:orientation="vertical"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true">
 
-        <Button
-            android:id="@+id/btn_dislike"
-            android:layout_width="match_parent"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab3"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:onClick="onClick"
-            android:text="넘기기" />
+            android:layout_marginBottom="30dp"
+            android:visibility="invisible"
+            android:src="@drawable/signalarm" />
 
-        <Button
-            android:id="@+id/btn_like"
-            android:layout_width="match_parent"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="onClick"
-            android:text="좋아요" />
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/floatingmessage"
+            android:visibility="invisible"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginBottom="30dp"
+            android:src="@drawable/floatingbtnmain"
+            app:backgroundTint="@android:color/transparent" />
 
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="30dp"
-        android:visibility="gone"
-        android:src="@drawable/signalarm" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/floatingmessage"
-        android:visibility="gone" />
-
-        android:src="@android:drawable/ic_dialog_email" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="65dp"
-        android:layout_height="65dp"
-        android:layout_gravity="bottom|end"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="20dp"
-        android:src="@drawable/floatingbtnmain"
-        app:backgroundTint="@android:color/transparent" />
 
 
 
-
-
-
-</LinearLayout>
+</RelativeLayout>
