--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -11,6 +11,14 @@
     android:keepScreenOn="true"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="70dp"
+        android:layout_height="20dp"
+        android:layout_gravity="left"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        android:src="@drawable/buttonback" />
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -18,40 +26,37 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
             android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="70dp"
-                android:layout_height="20dp"
-                android:layout_gravity="left"
-                android:src="@drawable/buttonback" />
-
-            <ImageView
                 android:layout_width="100dp"
-                android:layout_height="20dp"
+                android:layout_height="wrap_content"
                 android:src="@drawable/signin" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/center_image"
+            <RelativeLayout
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_margin="10dp"
-                android:src="@drawable/buttonprofile" />
+                android:layout_marginTop="10dp">
 
-            <Button
-                android:id="@+id/imageAdd"
-                android:layout_width="80dp"
-                android:layout_height="30dp"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/buttonprofile"
-                android:shadowColor="#000000"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="5"
-                android:text="사진 추가"
-                android:textColor="#000000" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/center_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/buttonprofile" />
+
+                <ImageButton
+                    android:id="@+id/imageAdd"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:background="@drawable/buttoncamera"/>
+
+            </RelativeLayout>
+
 
             <ImageView
                 android:layout_width="80dp"
@@ -62,25 +67,30 @@
 
             <EditText
                 android:id="@+id/nameEdit"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/inputbg"
+                android:paddingLeft="10dp"
                 android:hint="Name"
+                android:imeOptions="actionNext"
                 android:inputType="text" />
 
             <EditText
                 android:id="@+id/ageEdit"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/inputbg"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="10dp"
                 android:hint="Age"
+                android:imeOptions="actionDone"
                 android:inputType="number" />
 
             <LinearLayout
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_gravity="left"
-                android:layout_marginLeft="16dp"
+                android:layout_gravity="center"
+                android:gravity="center_vertical"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/inputbg"
                 android:orientation="horizontal">
@@ -89,7 +99,7 @@
                     android:id="@+id/genderText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:paddingLeft="10dp"
                     android:text="Gender"
                     android:textSize="17dp" />
 
@@ -98,7 +108,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginTop="7dp"
                     android:orientation="horizontal">
 
                     <RadioButton
@@ -122,8 +131,9 @@
 
             <EditText
                 android:id="@+id/areaEdit"
-                android:layout_width="350dp"
-                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:paddingLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/inputbg"
                 android:hint="Area"
@@ -141,34 +151,39 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/idEdit"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginTop="5dp"
+                    android:paddingLeft="10dp"
                     android:background="@drawable/inputbg"
+                    android:layout_weight="1"
                     android:hint="ID"
+                    android:singleLine="true"
+                    android:maxLines="1"
+                    android:imeOptions="actionDone"
                     android:inputType="text" />
 
                 <ImageView
                     android:id="@+id/idCheckButton"
                     android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_height="40dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_marginTop="2dp"
                     android:src="@drawable/buttoncheck" />
             </LinearLayout>
 
             <EditText
                 android:id="@+id/passwordEdit"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
+                android:paddingLeft="10dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/inputbg"
                 android:hint="Password"
-                android:inputType="text" />
+                android:inputType="textPassword" />
 
 
             <ImageView
@@ -181,13 +196,12 @@
 
             <LinearLayout
                 android:id="@+id/linear_hobby1"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_alignParentStart="true"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
                 android:layout_below="@+id/text_hobby"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:background="@drawable/inputbg"
                 android:orientation="horizontal">
@@ -218,13 +232,11 @@
 
             <LinearLayout
                 android:id="@+id/linear_hobby2"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/linear_hobby1"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:background="@drawable/inputbg"
                 android:orientation="horizontal">
 
@@ -253,13 +265,11 @@
 
             <LinearLayout
                 android:id="@+id/linear_hobby3"
-                android:layout_width="350dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/linear_hobby2"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:background="@drawable/inputbg"
                 android:orientation="horizontal">
 
@@ -289,7 +299,8 @@
 
             <ImageView
                 android:id="@+id/join"
-                android:layout_width="500dp"
+                android:layout_width="match_parent"
+                android:layout_marginTop="10dp"
                 android:layout_height="50dp"
                 android:src="@drawable/buttonsignin" />
 
