--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -228,6 +228,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:spinnerMode="dropdown"
                     android:visibility="gone" />
             </FrameLayout>
 
@@ -252,6 +253,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:spinnerMode="dropdown"
                     android:visibility="gone" />
 
             </FrameLayout>
@@ -292,6 +294,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:spinnerMode="dropdown"
                     android:visibility="gone" />
 
             </FrameLayout>
@@ -317,6 +320,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:spinnerMode="dropdown"
                     android:visibility="gone" />
 
             </FrameLayout>
@@ -358,6 +362,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:spinnerMode="dropdown"
                     android:visibility="gone" />
             </FrameLayout>
 
@@ -382,6 +387,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:textAlignment="center"
+                    android:spinnerMode="dropdown"
                     android:visibility="gone" />
 
             </FrameLayout>
