--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -6,19 +6,6 @@
     android:background="@drawable/background2"
     android:orientation="vertical">
 
-
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="70dp"
-                android:layout_height="20dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_gravity="left"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="8dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/buttonback" />
-
         <LinearLayout
             android:id="@+id/first_layout"
             android:layout_width="wrap_content"
@@ -31,8 +18,6 @@
                 android:id="@+id/imageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
                 android:src="@drawable/sub_img_picture" />
 
         </LinearLayout>
@@ -41,13 +26,14 @@
             android:id="@+id/second_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
             android:layout_below="@+id/first_layout">
 
             <TextView
                 android:id="@+id/profile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:text="홍길동"
                 android:textColor="@android:color/background_dark"
                 android:textSize="18sp" />
@@ -68,8 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/second_layout"
-
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="15dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -98,32 +83,6 @@
                     android:text="여자" />
 
             </RadioGroup>
-            <RadioGroup
-                android:id="@+id/genderRadio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="7dp"
-                android:orientation="horizontal">
-
-                <RadioButton
-                    android:id="@+id/man"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"
-                    android:text="남성" />
-
-                <RadioButton
-                    android:id="@+id/woman"
-                    android:layout_width="match_parent"
-                    android:layout_height="20dp"
-                    android:layout_margin="10dp"
-                    android:text="여성" />
-
-            </RadioGroup>
-
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -138,27 +97,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="8dp"
                 android:gravity="left"
                 android:text="거주지역  : "
                 android:textColor="@android:color/background_dark"
                 android:textSize="20sp" />
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/profile_area"
                     android:layout_width="match_parent"
-
-
                     android:layout_height="30dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="8dp"
-
-                    android:gravity="center"
                     android:text="미입력"
                     android:textColor="@android:color/background_dark"
                     android:textSize="20sp"
@@ -167,16 +119,13 @@
                 <EditText
                     android:id="@+id/profile_area_edit"
                     android:layout_width="match_parent"
-
                     android:layout_height="50dp"
                     android:backgroundTint="@android:color/transparent"
-                    android:gravity="center"
                     android:hint="주소를 입력하세요."
                     android:inputType="text"
                     android:textColor="@android:color/background_dark"
                     android:textSize="20sp"
                     android:visibility="gone" />
-
 
             </FrameLayout>
 
@@ -188,70 +137,66 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/four_layout"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="35dp"
-            android:text="취미선택"
+            android:layout_marginTop="15dp"
+            android:text="나의 취미"
             android:textColor="@android:color/background_dark"
             android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/hobby1_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@+id/hobbytext"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="15dp"
+                android:textAlignment="center"
                 android:text="1 순위" />
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/mypage_firsthobby1"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="3"
                     android:text="미입력"
                     android:textAlignment="center"
                     android:visibility="visible" />
 
                 <Spinner
                     android:id="@+id/hobby_first_edit"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
                     android:textAlignment="center"
                     android:spinnerMode="dropdown"
                     android:visibility="gone" />
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/mypage_firsthobby2"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="3"
                     android:text="미입력"
                     android:textAlignment="center"
                     android:visibility="visible" />
 
                 <Spinner
                     android:id="@+id/hobby_first_sub_edit"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
                     android:textAlignment="center"
                     android:spinnerMode="dropdown"
                     android:visibility="gone" />
@@ -262,7 +207,7 @@
         <LinearLayout
             android:id="@+id/hobby2_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@+id/hobby1_layout"
             android:layout_marginTop="7dp"
             android:gravity="center">
@@ -270,29 +215,28 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:textAlignment="center"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="15dp"
                 android:text="2 순위" />
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/mypage_second_hobby1"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="3"
                     android:text="미입력"
                     android:textAlignment="center"
                     android:visibility="visible" />
 
                 <Spinner
                     android:id="@+id/hobby_second_edit"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
                     android:textAlignment="center"
                     android:spinnerMode="dropdown"
                     android:visibility="gone" />
@@ -300,25 +244,22 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/mypage_second_hobby2"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="3"
                     android:text="미입력"
                     android:textAlignment="center"
                     android:visibility="visible" />
 
                 <Spinner
                     android:id="@+id/hobby_second_sub_edit"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
                     android:textAlignment="center"
                     android:spinnerMode="dropdown"
                     android:visibility="gone" />
@@ -330,7 +271,7 @@
         <LinearLayout
             android:id="@+id/hobby3_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@+id/hobby2_layout"
             android:layout_marginTop="7dp"
             android:gravity="center">
@@ -338,54 +279,50 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:textAlignment="center"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="15dp"
                 android:text="3 순위" />
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/mypage_thirdhobby1"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="3"
                     android:text="미입력"
                     android:textAlignment="center"
                     android:visibility="visible" />
 
                 <Spinner
                     android:id="@+id/hobby_third_edit"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
                     android:textAlignment="center"
                     android:spinnerMode="dropdown"
                     android:visibility="gone" />
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <TextView
                     android:id="@+id/mypage_thirdhobby2"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:layout_weight="3"
                     android:text="미입력"
                     android:textAlignment="center"
                     android:visibility="visible" />
 
                 <Spinner
                     android:id="@+id/hobby_third_sub_edit"
-                    android:layout_width="100dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_weight="1"
                     android:textAlignment="center"
                     android:spinnerMode="dropdown"
                     android:visibility="gone" />
